--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <ul>
+        <li><a href="./recipes/seaweed-soup.html">Seaweed Soup</a></li>
+        <li><a href="./recipes/protein-pizza.html">Protein Pizza</a></li>
+        <li><a href="./recipes/breakfast-burrito.html">Breakfast Burrito</a></li>
+        </ul>
     </body>
 </html>
