--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Odin Recipes</title>
+        <title>Kevin's Recipes</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <div class="title">
+        <h1>Kevin's Recipes</h1>
+    </div>
         <ul>
         <li><a href="./recipes/seaweed-soup.html">Seaweed Soup</a></li>
         <li><a href="./recipes/protein-pizza.html">Protein Pizza</a></li>
